anonymization/main/default/objects/TEKCO_AnonymizationOrgConfig__mdt/TEKCO_AnonymizationOrgConfig__mdt.object-meta.xml
<CustomObject>
    <label>TEKCO Anonymization Org Config</label>
    <pluralLabel>TEKCO Anonymization Org Configs</pluralLabel>
</CustomObject>