anonymization/main/default/objects/TEKCO_AnonymizationOrgConfig__mdt/fields/TEKCO_BrandCodeField__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BrandCodeField__c</fullName>
    <label>Brand Code Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>