anonymization/main/default/objects/TEKCO_AnonymizationOrgConfig__mdt/fields/TEKCO_BrandCountryField__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BrandCountryField__c</fullName>
    <label>Brand Country Field API Name</label>
<length>255</length>
    <type>Text</type>
</CustomField>