anonymization/main/default/objects/TEKCO_AnonymizationOrgConfig__mdt/fields/TEKCO_BrandObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BrandObjectApiName__c</fullName>
    <label>Brand Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>