anonymization/main/default/objects/TEKCO_AnonymizationOrgConfig__mdt/fields/TEKCO_BypassObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BypassObjectApiName__c</fullName>
    <description>API name of the hierarchy Custom Setting whose boolean flags the anonymization raises for the running user during a run (automation bypass). Blank = no bypass at all: the tool touches nothing and every anonymization update pays full trigger/flow/validation-rule cost. Set = bypass through the named setting. Orgs without a config record default to TEKCO_BypassSettings__c.</description>
    <label>Bypass Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>