anonymization/main/default/objects/TEKCO_AnonymizationOrgConfig__mdt/fields/TEKCO_ExternalIdFields__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ExternalIdFields__c</fullName>
    <label>Extra External ID Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>