anonymization/main/default/objects/TEKCO_AnonymizationOrgConfig__mdt/fields/TEKCO_OrgDomain__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_OrgDomain__c</fullName>
    <label>Org Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>